[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/models/levels/env/halls/LHall0.material" type="Material" id=1]
[ext_resource path="res://code/gameplay/rooms/lhall0.gd" type="Script" id=2]

[sub_resource type="ArrayMesh" id=1]
resource_name = "lhall0_Plane"
surfaces/0 = {
"aabb": AABB( -20, 0, -20, 45, 20, 45 ),
"array_data": PoolByteArray( 0, 0, 160, 193, 0, 0, 0, 0, 0, 0, 0, 128, 0, 127, 129, 95, 64, 54, 224, 56, 0, 0, 160, 65, 0, 0, 0, 0, 0, 0, 0, 128, 0, 127, 129, 95, 15, 47, 30, 59, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 160, 65, 0, 127, 129, 95, 15, 47, 224, 56, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 160, 193, 0, 127, 129, 95, 64, 54, 30, 59, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 0, 127, 129, 95, 2, 52, 255, 57, 0, 0, 160, 65, 0, 0, 0, 0, 0, 0, 32, 193, 0, 127, 129, 95, 198, 49, 173, 59, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 32, 193, 0, 127, 129, 95, 33, 53, 142, 58, 0, 0, 160, 193, 0, 0, 0, 0, 80, 80, 32, 65, 0, 127, 129, 95, 32, 53, 80, 56, 0, 0, 160, 65, 0, 0, 0, 0, 80, 80, 32, 65, 0, 127, 129, 95, 34, 41, 142, 58, 0, 0, 0, 0, 0, 0, 0, 0, 80, 80, 32, 65, 0, 127, 129, 95, 197, 49, 111, 57, 0, 0, 32, 65, 0, 0, 0, 0, 0, 0, 160, 65, 0, 127, 129, 95, 38, 41, 111, 57, 0, 0, 32, 65, 0, 0, 0, 0, 0, 0, 160, 193, 0, 127, 129, 95, 33, 53, 173, 59, 0, 0, 32, 65, 0, 0, 0, 0, 0, 0, 0, 128, 0, 127, 129, 95, 198, 49, 142, 58, 0, 0, 32, 65, 0, 0, 0, 0, 0, 0, 32, 193, 0, 127, 129, 95, 2, 52, 30, 59, 0, 0, 32, 65, 0, 0, 0, 0, 80, 80, 32, 65, 0, 127, 129, 95, 13, 47, 254, 57, 0, 0, 32, 193, 0, 0, 0, 0, 0, 0, 0, 128, 0, 127, 129, 95, 33, 53, 111, 57, 0, 0, 32, 193, 0, 0, 0, 0, 0, 0, 160, 65, 0, 127, 129, 95, 198, 49, 80, 56, 0, 0, 32, 193, 0, 0, 0, 0, 0, 0, 32, 193, 0, 127, 129, 95, 64, 54, 255, 57, 0, 0, 32, 193, 0, 0, 0, 0, 80, 80, 32, 65, 0, 127, 129, 95, 1, 52, 223, 56, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 200, 65, 0, 127, 129, 95, 209, 44, 152, 56, 0, 0, 32, 65, 0, 0, 0, 0, 0, 0, 200, 65, 0, 127, 129, 95, 81, 29, 39, 57, 0, 0, 32, 193, 0, 0, 0, 0, 0, 0, 200, 65, 0, 127, 129, 95, 167, 48, 8, 56, 0, 0, 200, 65, 0, 0, 0, 0, 0, 0, 0, 128, 0, 127, 129, 95, 209, 44, 102, 59, 0, 0, 200, 65, 0, 0, 0, 0, 0, 0, 32, 193, 0, 127, 129, 95, 167, 48, 245, 59, 0, 0, 200, 65, 0, 0, 0, 0, 80, 80, 32, 65, 0, 127, 129, 95, 45, 29, 214, 58, 0, 0, 160, 193, 0, 0, 152, 65, 0, 0, 0, 128, 0, 129, 129, 95, 74, 58, 30, 59, 0, 0, 160, 65, 0, 0, 152, 65, 0, 0, 0, 128, 0, 129, 129, 95, 12, 56, 224, 56, 0, 0, 0, 0, 0, 0, 152, 65, 0, 0, 160, 65, 0, 129, 129, 95, 12, 56, 30, 59, 0, 0, 0, 0, 0, 0, 152, 65, 0, 0, 160, 193, 0, 129, 129, 95, 74, 58, 224, 56, 0, 0, 0, 0, 0, 0, 152, 65, 0, 0, 0, 128, 0, 129, 129, 95, 43, 57, 255, 57, 0, 0, 160, 65, 0, 0, 152, 65, 0, 0, 32, 193, 0, 129, 129, 95, 156, 56, 80, 56, 0, 0, 0, 0, 0, 0, 152, 65, 0, 0, 32, 193, 0, 129, 129, 95, 187, 57, 111, 57, 0, 0, 160, 193, 0, 0, 152, 65, 80, 80, 32, 65, 0, 129, 129, 95, 187, 57, 174, 59, 0, 0, 160, 65, 0, 0, 152, 65, 80, 80, 32, 65, 0, 129, 129, 95, 249, 54, 111, 57, 0, 0, 0, 0, 0, 0, 152, 65, 80, 80, 32, 65, 0, 129, 129, 95, 155, 56, 143, 58, 0, 0, 32, 65, 0, 0, 152, 65, 0, 0, 160, 65, 0, 129, 129, 95, 250, 54, 142, 58, 0, 0, 32, 65, 0, 0, 152, 65, 0, 0, 160, 193, 0, 129, 129, 95, 187, 57, 80, 56, 0, 0, 32, 65, 0, 0, 152, 65, 0, 0, 0, 128, 0, 129, 129, 95, 156, 56, 111, 57, 0, 0, 32, 65, 0, 0, 152, 65, 0, 0, 32, 193, 0, 129, 129, 95, 43, 57, 224, 56, 0, 0, 32, 65, 0, 0, 152, 65, 80, 80, 32, 65, 0, 129, 129, 95, 12, 56, 255, 57, 0, 0, 32, 193, 0, 0, 152, 65, 0, 0, 0, 128, 0, 129, 129, 95, 187, 57, 142, 58, 0, 0, 32, 193, 0, 0, 152, 65, 0, 0, 160, 65, 0, 129, 129, 95, 156, 56, 173, 59, 0, 0, 32, 193, 0, 0, 152, 65, 0, 0, 32, 193, 0, 129, 129, 95, 74, 58, 255, 57, 0, 0, 32, 193, 0, 0, 152, 65, 80, 80, 32, 65, 0, 129, 129, 95, 43, 57, 30, 59, 0, 0, 0, 0, 0, 0, 152, 65, 0, 0, 200, 65, 0, 129, 129, 95, 137, 55, 102, 59, 0, 0, 32, 65, 0, 0, 152, 65, 0, 0, 200, 65, 0, 129, 129, 95, 106, 54, 214, 58, 0, 0, 32, 193, 0, 0, 152, 65, 0, 0, 200, 65, 0, 129, 129, 95, 84, 56, 245, 59, 0, 0, 200, 65, 0, 0, 152, 65, 0, 0, 0, 128, 0, 129, 129, 95, 137, 55, 152, 56, 0, 0, 200, 65, 0, 0, 152, 65, 0, 0, 32, 193, 0, 129, 129, 95, 84, 56, 8, 56, 0, 0, 200, 65, 0, 0, 152, 65, 80, 80, 32, 65, 0, 129, 129, 95, 105, 54, 40, 57, 0, 0, 160, 193, 0, 0, 0, 0, 0, 0, 0, 128, 63, 0, 0, 1, 245, 59, 165, 57, 0, 0, 160, 193, 0, 0, 0, 0, 0, 0, 0, 128, 127, 0, 0, 1, 245, 59, 165, 57, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 160, 193, 0, 0, 0, 1, 245, 59, 207, 54, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 160, 193, 63, 0, 0, 1, 245, 59, 207, 54, 0, 0, 160, 65, 0, 0, 0, 0, 0, 0, 32, 193, 193, 0, 0, 1, 245, 59, 245, 49, 0, 0, 160, 65, 0, 0, 0, 0, 0, 0, 32, 193, 0, 0, 0, 1, 245, 59, 245, 49, 0, 0, 160, 193, 0, 0, 0, 0, 80, 80, 32, 65, 127, 63, 0, 1, 245, 59, 113, 58, 0, 0, 160, 193, 0, 0, 0, 0, 80, 80, 32, 65, 127, 0, 0, 1, 245, 59, 113, 58, 0, 0, 160, 65, 0, 0, 0, 0, 80, 80, 32, 65, 129, 63, 0, 1, 129, 50, 28, 55, 0, 0, 160, 65, 0, 0, 0, 0, 80, 80, 32, 65, 127, 127, 0, 1, 129, 50, 28, 55, 0, 0, 32, 65, 0, 0, 0, 0, 0, 0, 160, 65, 129, 0, 0, 1, 129, 50, 223, 52, 0, 0, 32, 65, 0, 0, 0, 0, 0, 0, 160, 65, 129, 63, 0, 1, 129, 50, 223, 52, 0, 0, 32, 65, 0, 0, 0, 0, 0, 0, 160, 193, 193, 0, 0, 1, 245, 59, 57, 53, 0, 0, 32, 65, 0, 0, 0, 0, 0, 0, 160, 193, 0, 0, 0, 1, 245, 59, 57, 53, 0, 0, 32, 193, 0, 0, 0, 0, 0, 0, 160, 65, 127, 63, 0, 1, 245, 59, 144, 59, 0, 0, 32, 193, 0, 0, 0, 0, 0, 0, 160, 65, 127, 0, 0, 1, 245, 59, 144, 59, 0, 0, 32, 65, 0, 0, 0, 0, 0, 0, 200, 65, 129, 0, 0, 1, 129, 50, 20, 52, 0, 0, 32, 65, 0, 0, 0, 0, 0, 0, 200, 65, 127, 127, 129, 63, 5, 56, 213, 55, 0, 0, 32, 193, 0, 0, 0, 0, 0, 0, 200, 65, 127, 127, 129, 63, 7, 58, 213, 55, 0, 0, 32, 193, 0, 0, 0, 0, 0, 0, 200, 65, 127, 0, 0, 1, 245, 59, 245, 59, 0, 0, 200, 65, 0, 0, 0, 0, 0, 0, 32, 193, 129, 0, 0, 63, 159, 51, 213, 55, 0, 0, 200, 65, 0, 0, 0, 0, 0, 0, 32, 193, 0, 0, 0, 1, 245, 59, 95, 48, 0, 0, 200, 65, 0, 0, 0, 0, 80, 80, 32, 65, 129, 0, 0, 63, 213, 55, 213, 55, 0, 0, 200, 65, 0, 0, 0, 0, 80, 80, 32, 65, 127, 127, 0, 1, 129, 50, 231, 55, 0, 0, 160, 193, 0, 0, 160, 65, 0, 0, 0, 128, 63, 0, 0, 1, 95, 58, 165, 57, 0, 0, 160, 193, 0, 0, 160, 65, 0, 0, 0, 128, 127, 0, 0, 1, 95, 58, 165, 57, 0, 0, 0, 0, 0, 0, 160, 65, 0, 0, 160, 193, 0, 0, 0, 1, 95, 58, 207, 54, 0, 0, 0, 0, 0, 0, 160, 65, 0, 0, 160, 193, 63, 0, 0, 1, 95, 58, 207, 54, 0, 0, 160, 65, 0, 0, 160, 65, 0, 0, 32, 193, 193, 0, 0, 1, 95, 58, 245, 49, 0, 0, 160, 65, 0, 0, 160, 65, 0, 0, 32, 193, 0, 0, 0, 1, 95, 58, 245, 49, 0, 0, 160, 193, 0, 0, 160, 65, 80, 80, 32, 65, 127, 63, 0, 1, 95, 58, 113, 58, 0, 0, 160, 193, 0, 0, 160, 65, 80, 80, 32, 65, 127, 0, 0, 1, 95, 58, 113, 58, 0, 0, 160, 65, 0, 0, 160, 65, 80, 80, 32, 65, 129, 63, 0, 1, 45, 29, 28, 55, 0, 0, 160, 65, 0, 0, 160, 65, 80, 80, 32, 65, 127, 127, 0, 1, 45, 29, 28, 55, 0, 0, 32, 65, 0, 0, 160, 65, 0, 0, 160, 65, 129, 0, 0, 1, 45, 29, 223, 52, 0, 0, 32, 65, 0, 0, 160, 65, 0, 0, 160, 65, 129, 63, 0, 1, 45, 29, 223, 52, 0, 0, 32, 65, 0, 0, 160, 65, 0, 0, 160, 193, 193, 0, 0, 1, 95, 58, 57, 53, 0, 0, 32, 65, 0, 0, 160, 65, 0, 0, 160, 193, 0, 0, 0, 1, 95, 58, 57, 53, 0, 0, 32, 193, 0, 0, 160, 65, 0, 0, 160, 65, 127, 63, 0, 1, 95, 58, 144, 59, 0, 0, 32, 193, 0, 0, 160, 65, 0, 0, 160, 65, 127, 0, 0, 1, 95, 58, 144, 59, 0, 0, 32, 65, 0, 0, 160, 65, 0, 0, 200, 65, 129, 0, 0, 1, 45, 29, 20, 52, 0, 0, 32, 65, 0, 0, 160, 65, 0, 0, 200, 65, 127, 127, 129, 63, 5, 56, 161, 51, 0, 0, 32, 193, 0, 0, 160, 65, 0, 0, 200, 65, 127, 127, 129, 63, 7, 58, 161, 51, 0, 0, 32, 193, 0, 0, 160, 65, 0, 0, 200, 65, 127, 0, 0, 1, 95, 58, 245, 59, 0, 0, 200, 65, 0, 0, 160, 65, 0, 0, 32, 193, 129, 0, 0, 63, 159, 51, 161, 51, 0, 0, 200, 65, 0, 0, 160, 65, 0, 0, 32, 193, 0, 0, 0, 1, 95, 58, 95, 48, 0, 0, 200, 65, 0, 0, 160, 65, 80, 80, 32, 65, 129, 0, 0, 63, 213, 55, 161, 51, 0, 0, 200, 65, 0, 0, 160, 65, 80, 80, 32, 65, 127, 127, 0, 1, 45, 29, 231, 55, 0, 0, 32, 65, 0, 0, 32, 65, 0, 0, 200, 65, 129, 0, 0, 1, 171, 46, 20, 52, 0, 0, 32, 65, 0, 0, 32, 65, 0, 0, 200, 65, 127, 127, 129, 63, 5, 56, 210, 53, 0, 0, 32, 65, 0, 0, 32, 65, 0, 0, 160, 65, 129, 0, 0, 1, 171, 46, 223, 52, 0, 0, 32, 65, 0, 0, 32, 65, 0, 0, 160, 65, 129, 63, 0, 1, 171, 46, 223, 52, 0, 0, 160, 65, 0, 0, 32, 65, 80, 80, 32, 65, 129, 63, 0, 1, 171, 46, 28, 55, 0, 0, 160, 65, 0, 0, 32, 65, 80, 80, 32, 65, 127, 127, 0, 1, 171, 46, 28, 55, 0, 0, 200, 65, 0, 0, 32, 65, 80, 80, 32, 65, 129, 0, 0, 63, 213, 55, 210, 53, 0, 0, 200, 65, 0, 0, 32, 65, 80, 80, 32, 65, 127, 127, 0, 1, 171, 46, 231, 55, 0, 0, 200, 65, 0, 0, 32, 65, 0, 0, 32, 193, 129, 0, 0, 63, 159, 51, 210, 53, 0, 0, 200, 65, 0, 0, 32, 65, 0, 0, 32, 193, 0, 0, 0, 1, 42, 59, 95, 48, 0, 0, 160, 65, 0, 0, 32, 65, 0, 0, 32, 193, 193, 0, 0, 1, 42, 59, 245, 49, 0, 0, 160, 65, 0, 0, 32, 65, 0, 0, 32, 193, 0, 0, 0, 1, 42, 59, 245, 49, 0, 0, 32, 65, 0, 0, 32, 65, 0, 0, 160, 193, 193, 0, 0, 1, 42, 59, 57, 53, 0, 0, 32, 65, 0, 0, 32, 65, 0, 0, 160, 193, 0, 0, 0, 1, 42, 59, 57, 53, 0, 0, 0, 0, 0, 0, 32, 65, 0, 0, 160, 193, 0, 0, 0, 1, 42, 59, 207, 54, 0, 0, 0, 0, 0, 0, 32, 65, 0, 0, 160, 193, 63, 0, 0, 1, 42, 59, 207, 54, 0, 0, 160, 193, 0, 0, 32, 65, 0, 0, 0, 128, 63, 0, 0, 1, 42, 59, 165, 57, 0, 0, 160, 193, 0, 0, 32, 65, 0, 0, 0, 128, 127, 0, 0, 1, 42, 59, 165, 57, 0, 0, 160, 193, 0, 0, 32, 65, 80, 80, 32, 65, 127, 63, 0, 1, 42, 59, 113, 58, 0, 0, 160, 193, 0, 0, 32, 65, 80, 80, 32, 65, 127, 0, 0, 1, 42, 59, 113, 58, 0, 0, 32, 193, 0, 0, 32, 65, 0, 0, 160, 65, 127, 63, 0, 1, 42, 59, 144, 59, 0, 0, 32, 193, 0, 0, 32, 65, 0, 0, 160, 65, 127, 0, 0, 1, 42, 59, 144, 59, 0, 0, 32, 193, 0, 0, 32, 65, 0, 0, 200, 65, 127, 127, 129, 63, 7, 58, 210, 53, 0, 0, 32, 193, 0, 0, 32, 65, 0, 0, 200, 65, 127, 0, 0, 1, 42, 59, 245, 59, 0, 0, 160, 64, 0, 0, 0, 0, 0, 0, 200, 65, 127, 127, 129, 63, 133, 56, 213, 55, 0, 0, 160, 64, 0, 0, 160, 65, 0, 0, 200, 65, 127, 127, 129, 63, 133, 56, 161, 51, 0, 0, 160, 64, 0, 0, 32, 65, 0, 0, 200, 65, 127, 127, 129, 63, 133, 56, 210, 53, 0, 0, 160, 192, 0, 0, 0, 0, 0, 0, 200, 65, 127, 127, 129, 63, 134, 57, 213, 55, 0, 0, 160, 192, 0, 0, 160, 65, 0, 0, 200, 65, 127, 127, 129, 63, 134, 57, 161, 51, 0, 0, 160, 192, 0, 0, 32, 65, 0, 0, 200, 65, 127, 127, 129, 63, 134, 57, 210, 53, 0, 0, 200, 65, 0, 0, 0, 0, 80, 80, 160, 64, 129, 0, 0, 63, 211, 54, 213, 55, 0, 0, 200, 65, 0, 0, 160, 65, 80, 80, 160, 64, 129, 0, 0, 63, 211, 54, 161, 51, 0, 0, 200, 65, 0, 0, 32, 65, 80, 80, 160, 64, 129, 0, 0, 63, 211, 54, 210, 53, 0, 0, 200, 65, 0, 0, 0, 0, 0, 0, 160, 192, 129, 0, 0, 63, 209, 52, 213, 55, 0, 0, 200, 65, 0, 0, 160, 65, 0, 0, 160, 192, 129, 0, 0, 63, 209, 52, 161, 51, 0, 0, 200, 65, 0, 0, 32, 65, 0, 0, 160, 192, 129, 0, 0, 63, 209, 52, 210, 53, 58, 183, 3, 193, 0, 0, 0, 0, 198, 72, 60, 193, 127, 37, 0, 127, 63, 37, 42, 51, 58, 183, 3, 193, 0, 0, 152, 65, 198, 72, 60, 193, 127, 37, 0, 127, 185, 56, 42, 51, 0, 0, 240, 192, 0, 0, 0, 0, 0, 0, 32, 193, 127, 0, 0, 127, 63, 37, 110, 49, 0, 0, 240, 192, 0, 0, 152, 65, 0, 0, 32, 193, 127, 0, 0, 127, 185, 56, 110, 49, 58, 183, 3, 193, 0, 0, 0, 0, 58, 183, 3, 193, 63, 0, 0, 127, 63, 37, 101, 47, 58, 183, 3, 193, 0, 0, 152, 65, 58, 183, 3, 193, 63, 0, 0, 127, 185, 56, 101, 47, 0, 0, 32, 193, 0, 0, 0, 0, 0, 0, 240, 192, 0, 0, 0, 127, 63, 37, 218, 43, 0, 0, 32, 193, 0, 0, 152, 65, 0, 0, 240, 192, 0, 0, 0, 127, 185, 56, 218, 43, 198, 72, 60, 193, 0, 0, 0, 0, 58, 183, 3, 193, 219, 0, 0, 127, 63, 37, 89, 31, 198, 72, 60, 193, 0, 0, 152, 65, 58, 183, 3, 193, 219, 0, 0, 127, 185, 56, 89, 31, 232, 220, 14, 192, 0, 0, 0, 0, 99, 36, 142, 193, 127, 37, 0, 127, 63, 37, 42, 51, 232, 220, 14, 192, 0, 0, 152, 65, 99, 36, 142, 193, 127, 37, 0, 127, 185, 56, 42, 51, 0, 0, 192, 191, 0, 0, 0, 0, 0, 0, 128, 193, 127, 0, 0, 127, 63, 37, 110, 49, 0, 0, 192, 191, 0, 0, 152, 65, 0, 0, 128, 193, 127, 0, 0, 127, 185, 56, 110, 49, 232, 220, 14, 192, 0, 0, 0, 0, 58, 183, 99, 193, 63, 0, 0, 127, 63, 37, 101, 47, 232, 220, 14, 192, 0, 0, 152, 65, 58, 183, 99, 193, 63, 0, 0, 127, 185, 56, 101, 47, 0, 0, 128, 192, 0, 0, 0, 0, 0, 0, 88, 193, 0, 0, 0, 127, 63, 37, 218, 43, 0, 0, 128, 192, 0, 0, 152, 65, 0, 0, 88, 193, 0, 0, 0, 127, 185, 56, 218, 43, 140, 145, 184, 192, 0, 0, 0, 0, 58, 183, 99, 193, 219, 0, 0, 127, 63, 37, 89, 31, 140, 145, 184, 192, 0, 0, 152, 65, 58, 183, 99, 193, 219, 0, 0, 127, 185, 56, 89, 31, 58, 183, 99, 193, 0, 0, 0, 0, 140, 145, 184, 192, 127, 37, 0, 127, 63, 37, 42, 51, 58, 183, 99, 193, 0, 0, 152, 65, 140, 145, 184, 192, 127, 37, 0, 127, 185, 56, 42, 51, 0, 0, 88, 193, 0, 0, 0, 0, 0, 0, 128, 192, 127, 0, 0, 127, 63, 37, 110, 49, 0, 0, 88, 193, 0, 0, 152, 65, 0, 0, 128, 192, 127, 0, 0, 127, 185, 56, 110, 49, 58, 183, 99, 193, 0, 0, 0, 0, 232, 220, 14, 192, 63, 0, 0, 127, 63, 37, 101, 47, 58, 183, 99, 193, 0, 0, 152, 65, 232, 220, 14, 192, 63, 0, 0, 127, 185, 56, 101, 47, 0, 0, 128, 193, 0, 0, 0, 0, 0, 0, 192, 191, 0, 0, 0, 127, 63, 37, 218, 43, 0, 0, 128, 193, 0, 0, 152, 65, 0, 0, 192, 191, 0, 0, 0, 127, 185, 56, 218, 43, 99, 36, 142, 193, 0, 0, 0, 0, 232, 220, 14, 192, 219, 0, 0, 127, 63, 37, 89, 31, 99, 36, 142, 193, 0, 0, 152, 65, 232, 220, 14, 192, 219, 0, 0, 127, 185, 56, 89, 31 ),
"array_index_data": PoolByteArray( 13, 0, 11, 0, 5, 0, 5, 0, 22, 0, 1, 0, 5, 0, 23, 0, 22, 0, 0, 0, 17, 0, 15, 0, 14, 0, 1, 0, 8, 0, 14, 0, 12, 0, 1, 0, 15, 0, 6, 0, 4, 0, 15, 0, 17, 0, 6, 0, 10, 0, 14, 0, 8, 0, 2, 0, 21, 0, 16, 0, 2, 0, 19, 0, 21, 0, 2, 0, 14, 0, 10, 0, 2, 0, 9, 0, 14, 0, 12, 0, 5, 0, 1, 0, 12, 0, 13, 0, 5, 0, 18, 0, 4, 0, 9, 0, 18, 0, 15, 0, 4, 0, 7, 0, 18, 0, 16, 0, 3, 0, 6, 0, 17, 0, 9, 0, 12, 0, 14, 0, 9, 0, 4, 0, 12, 0, 6, 0, 11, 0, 13, 0, 6, 0, 3, 0, 11, 0, 16, 0, 9, 0, 2, 0, 16, 0, 18, 0, 9, 0, 4, 0, 13, 0, 12, 0, 4, 0, 6, 0, 13, 0, 7, 0, 15, 0, 18, 0, 7, 0, 0, 0, 15, 0, 38, 0, 30, 0, 36, 0, 30, 0, 47, 0, 48, 0, 30, 0, 26, 0, 47, 0, 25, 0, 40, 0, 42, 0, 39, 0, 26, 0, 37, 0, 39, 0, 33, 0, 26, 0, 40, 0, 31, 0, 42, 0, 40, 0, 29, 0, 31, 0, 10, 0, 19, 0, 2, 0, 10, 0, 20, 0, 19, 0, 35, 0, 33, 0, 39, 0, 27, 0, 39, 0, 34, 0, 27, 0, 35, 0, 39, 0, 37, 0, 30, 0, 38, 0, 37, 0, 26, 0, 30, 0, 43, 0, 29, 0, 40, 0, 43, 0, 34, 0, 29, 0, 32, 0, 41, 0, 43, 0, 28, 0, 42, 0, 31, 0, 34, 0, 37, 0, 29, 0, 34, 0, 39, 0, 37, 0, 31, 0, 36, 0, 28, 0, 31, 0, 38, 0, 36, 0, 41, 0, 34, 0, 43, 0, 41, 0, 27, 0, 34, 0, 29, 0, 38, 0, 31, 0, 29, 0, 37, 0, 38, 0, 32, 0, 40, 0, 25, 0, 32, 0, 43, 0, 40, 0, 1, 0, 24, 0, 8, 0, 1, 0, 22, 0, 24, 0, 35, 0, 44, 0, 45, 0, 35, 0, 27, 0, 44, 0, 26, 0, 49, 0, 47, 0, 26, 0, 33, 0, 49, 0, 27, 0, 46, 0, 44, 0, 27, 0, 41, 0, 46, 0, 124, 0, 91, 0, 123, 0, 124, 0, 99, 0, 91, 0, 98, 0, 84, 0, 90, 0, 98, 0, 100, 0, 84, 0, 101, 0, 82, 0, 85, 0, 101, 0, 102, 0, 82, 0, 103, 0, 97, 0, 83, 0, 103, 0, 105, 0, 97, 0, 133, 0, 94, 0, 132, 0, 133, 0, 106, 0, 94, 0, 107, 0, 79, 0, 95, 0, 107, 0, 109, 0, 79, 0, 108, 0, 86, 0, 78, 0, 108, 0, 110, 0, 86, 0, 51, 0, 117, 0, 115, 0, 51, 0, 57, 0, 117, 0, 53, 0, 114, 0, 113, 0, 53, 0, 50, 0, 114, 0, 116, 0, 88, 0, 80, 0, 116, 0, 118, 0, 88, 0, 119, 0, 93, 0, 89, 0, 119, 0, 121, 0, 93, 0, 132, 0, 130, 0, 133, 0, 132, 0, 129, 0, 130, 0, 65, 0, 121, 0, 119, 0, 65, 0, 69, 0, 121, 0, 56, 0, 118, 0, 116, 0, 56, 0, 64, 0, 118, 0, 115, 0, 81, 0, 75, 0, 115, 0, 117, 0, 81, 0, 111, 0, 76, 0, 87, 0, 111, 0, 112, 0, 76, 0, 54, 0, 110, 0, 108, 0, 54, 0, 62, 0, 110, 0, 71, 0, 109, 0, 107, 0, 71, 0, 55, 0, 109, 0, 131, 0, 106, 0, 133, 0, 131, 0, 70, 0, 106, 0, 59, 0, 105, 0, 103, 0, 59, 0, 73, 0, 105, 0, 61, 0, 102, 0, 101, 0, 61, 0, 58, 0, 102, 0, 66, 0, 100, 0, 98, 0, 66, 0, 60, 0, 100, 0, 122, 0, 99, 0, 124, 0, 122, 0, 67, 0, 99, 0, 68, 0, 127, 0, 120, 0, 68, 0, 125, 0, 127, 0, 120, 0, 126, 0, 92, 0, 120, 0, 127, 0, 126, 0, 72, 0, 130, 0, 104, 0, 72, 0, 128, 0, 130, 0, 104, 0, 129, 0, 96, 0, 104, 0, 130, 0, 129, 0, 123, 0, 127, 0, 124, 0, 123, 0, 126, 0, 127, 0, 63, 0, 112, 0, 111, 0, 63, 0, 52, 0, 112, 0, 74, 0, 113, 0, 114, 0, 74, 0, 77, 0, 113, 0, 134, 0, 137, 0, 135, 0, 134, 0, 136, 0, 137, 0, 136, 0, 139, 0, 137, 0, 136, 0, 138, 0, 139, 0, 138, 0, 141, 0, 139, 0, 138, 0, 140, 0, 141, 0, 140, 0, 143, 0, 141, 0, 140, 0, 142, 0, 143, 0, 144, 0, 147, 0, 145, 0, 144, 0, 146, 0, 147, 0, 146, 0, 149, 0, 147, 0, 146, 0, 148, 0, 149, 0, 148, 0, 151, 0, 149, 0, 148, 0, 150, 0, 151, 0, 150, 0, 153, 0, 151, 0, 150, 0, 152, 0, 153, 0, 154, 0, 157, 0, 155, 0, 154, 0, 156, 0, 157, 0, 156, 0, 159, 0, 157, 0, 156, 0, 158, 0, 159, 0, 158, 0, 161, 0, 159, 0, 158, 0, 160, 0, 161, 0, 160, 0, 163, 0, 161, 0, 160, 0, 162, 0, 163, 0 ),
"blend_shape_data": [  ],
"format": 2194711,
"index_count": 450,
"material": ExtResource( 1 ),
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 164
}

[sub_resource type="ConcavePolygonShape" id=2]
data = PoolVector3Array( 10, 0, -10, 10, 0, -20, 20, 0, -10, 20, 0, -10, 25, 0, 0, 20, 0, 0, 20, 0, -10, 25, 0, -10, 25, 0, 0, -20, 0, 0, -10, 0, -10, -10, 0, 0, 10, 0, 10.0196, 20, 0, 0, 20, 0, 10.0196, 10, 0, 10.0196, 10, 0, 0, 20, 0, 0, -10, 0, 0, 0, 0, -10, 0, 0, 0, -10, 0, 0, -10, 0, -10, 0, 0, -10, 10, 0, 20, 10, 0, 10.0196, 20, 0, 10.0196, 0, 0, 20, -10, 0, 25, -10, 0, 20, 0, 0, 20, 0, 0, 25, -10, 0, 25, 0, 0, 20, 10, 0, 10.0196, 10, 0, 20, 0, 0, 20, 0, 0, 10.0196, 10, 0, 10.0196, 10, 0, 0, 20, 0, -10, 20, 0, 0, 10, 0, 0, 10, 0, -10, 20, 0, -10, -10, 0, 10.0196, 0, 0, 0, 0, 0, 10.0196, -10, 0, 10.0196, -10, 0, 0, 0, 0, 0, -20, 0, 10.0196, -10, 0, 10.0196, -10, 0, 20, 0, 0, -20, 0, 0, -10, -10, 0, -10, 0, 0, 10.0196, 10, 0, 0, 10, 0, 10.0196, 0, 0, 10.0196, 0, 0, 0, 10, 0, 0, 0, 0, -10, 10, 0, -20, 10, 0, -10, 0, 0, -10, 0, 0, -20, 10, 0, -20, -10, 0, 20, 0, 0, 10.0196, 0, 0, 20, -10, 0, 20, -10, 0, 10.0196, 0, 0, 10.0196, 0, 0, 0, 10, 0, -10, 10, 0, 0, 0, 0, 0, 0, 0, -10, 10, 0, -10, -20, 0, 10.0196, -10, 0, 0, -10, 0, 10.0196, -20, 0, 10.0196, -20, 0, 0, -10, 0, 0, 10, 19, -10, 20, 19, -10, 10, 19, -20, 20, 19, -10, 25, 19, 0, 25, 19, -10, 20, 19, -10, 20, 19, 0, 25, 19, 0, -20, 19, 0, -10, 19, 0, -10, 19, -10, 10, 19, 10.0196, 20, 19, 0, 10, 19, 0, 10, 19, 10.0196, 20, 19, 10.0196, 20, 19, 0, -10, 19, 0, 0, 19, -10, -10, 19, -10, -10, 19, 0, 0, 19, 0, 0, 19, -10, 10, 0, 20, 0, 0, 25, 0, 0, 20, 10, 0, 20, 10, 0, 25, 0, 0, 25, 10, 19, 20, 20, 19, 10.0196, 10, 19, 10.0196, 0, 19, 20, 10, 19, 10.0196, 0, 19, 10.0196, 0, 19, 20, 10, 19, 20, 10, 19, 10.0196, 10, 19, 0, 20, 19, -10, 10, 19, -10, 10, 19, 0, 20, 19, 0, 20, 19, -10, -10, 19, 10.0196, 0, 19, 0, -10, 19, 0, -10, 19, 10.0196, 0, 19, 10.0196, 0, 19, 0, -20, 19, 10.0196, -10, 19, 20, -10, 19, 10.0196, 0, 19, -20, -10, 19, -10, 0, 19, -10, 0, 19, 10.0196, 10, 19, 0, 0, 19, 0, 0, 19, 10.0196, 10, 19, 10.0196, 10, 19, 0, 0, 19, -10, 10, 19, -20, 0, 19, -20, 0, 19, -10, 10, 19, -10, 10, 19, -20, -10, 19, 20, 0, 19, 10.0196, -10, 19, 10.0196, -10, 19, 20, 0, 19, 20, 0, 19, 10.0196, 0, 19, 0, 10, 19, -10, 0, 19, -10, 0, 19, 0, 10, 19, 0, 10, 19, -10, -20, 19, 10.0196, -10, 19, 0, -20, 19, 0, -20, 19, 10.0196, -10, 19, 10.0196, -10, 19, 0, 20, 0, 0, 25, 0, 10.0196, 20, 0, 10.0196, 20, 0, 0, 25, 0, 0, 25, 0, 10.0196, 10, 19, 20, 0, 19, 25, 10, 19, 25, 10, 19, 20, 0, 19, 20, 0, 19, 25, 20, 19, 0, 25, 19, 10.0196, 25, 19, 0, 20, 19, 0, 20, 19, 10.0196, 25, 19, 10.0196, 0, 19, 20, -10, 19, 25, 0, 19, 25, 0, 19, 20, -10, 19, 20, -10, 19, 25, 5, 10, 25, 10, 20, 25, 5, 20, 25, 5, 10, 25, 10, 10, 25, 10, 20, 25, 10, 10, 25, 10, 20, 20, 10, 20, 25, 10, 10, 25, 10, 10, 20, 10, 20, 20, 10, 10, 20, 20, 20, 10.0196, 10, 20, 20, 10, 10, 20, 20, 10, 10.0196, 20, 20, 10.0196, 20, 10, 10.0196, 25, 20, 10.0196, 20, 20, 10.0196, 20, 10, 10.0196, 25, 10, 10.0196, 25, 20, 10.0196, 25, 10, -5, 25, 20, -10, 25, 20, -5, 25, 10, -5, 25, 10, -10, 25, 20, -10, 25, 10, -10, 20, 20, -10, 25, 20, -10, 25, 10, -10, 20, 10, -10, 20, 20, -10, 20, 10, -10, 10, 20, -20, 20, 20, -10, 20, 10, -10, 10, 10, -20, 10, 20, -20, -20, 0, 0, -20, 10, 10.0196, -20, 10, 0, -20, 0, 0, -20, 0, 10.0196, -20, 10, 10.0196, 0, 0, -20, -20, 10, 0, 0, 10, -20, 0, 0, -20, -20, 0, 0, -20, 10, 0, -20, 10, 10.0196, -10, 20, 20, -20, 20, 10.0196, -20, 10, 10.0196, -10, 10, 20, -10, 20, 20, -10, 10, 20, -10, 20, 25, -10, 20, 20, -10, 10, 20, -10, 10, 25, -10, 20, 25, 25, 20, -5, 25, 10, 5.0098, 25, 10, -5, 25, 20, -5, 25, 20, 5.0098, 25, 10, 5.0098, -10, 0, 20, -10, 10, 25, -10, 10, 20, -10, 0, 20, -10, 0, 25, -10, 10, 25, -20, 0, 10.0196, -10, 10, 20, -20, 10, 10.0196, -20, 0, 10.0196, -10, 0, 20, -10, 10, 20, -20, 10, 0, -20, 20, 10.0196, -20, 20, 0, -20, 10, 0, -20, 10, 10.0196, -20, 20, 10.0196, 10, 10, -20, 0, 20, -20, 10, 20, -20, 10, 10, -20, 0, 10, -20, 0, 20, -20, 20, 0, -10, 10, 10, -20, 20, 10, -10, 20, 0, -10, 10, 0, -20, 10, 10, -20, 25, 0, -10, 20, 10, -10, 25, 10, -10, 25, 0, -10, 20, 0, -10, 20, 10, -10, 25, 0, -5, 25, 10, -10, 25, 10, -5, 25, 0, -5, 25, 0, -10, 25, 10, -10, 20, 0, 10.0196, 25, 10, 10.0196, 20, 10, 10.0196, 20, 0, 10.0196, 25, 0, 10.0196, 25, 10, 10.0196, 10, 0, 20, 20, 10, 10.0196, 10, 10, 20, 10, 0, 20, 20, 0, 10.0196, 20, 10, 10.0196, 10, 0, 25, 10, 10, 20, 10, 10, 25, 10, 0, 25, 10, 0, 20, 10, 10, 20, 5, 0, 25, 10, 10, 25, 5, 10, 25, 5, 0, 25, 10, 0, 25, 10, 10, 25, -10, 0, 25, -5, 10, 25, -10, 10, 25, -10, 0, 25, -5, 0, 25, -5, 10, 25, -10, 10, 25, -5, 20, 25, -10, 20, 25, -10, 10, 25, -5, 10, 25, -5, 20, 25, 25, 0, 10.0196, 25, 10, 5.0098, 25, 10, 10.0196, 25, 0, 10.0196, 25, 0, 5.0098, 25, 10, 5.0098, 25, 10, 10.0196, 25, 20, 5.0098, 25, 20, 10.0196, 25, 10, 10.0196, 25, 10, 5.0098, 25, 20, 5.0098, 5, 20, 25, -5, 10, 25, 5, 10, 25, 5, 20, 25, -5, 20, 25, -5, 10, 25, 10, 0, -20, 0, 10, -20, 10, 10, -20, 10, 0, -20, 0, 0, -20, 0, 10, -20, -20, 20, 0, 0, 10, -20, -20, 10, 0, -20, 20, 0, 0, 20, -20, 0, 10, -20, -8.2322, 0, -11.7678, -7.5, 19, -10, -8.2322, 19, -11.7678, -8.2322, 0, -11.7678, -7.5, 0, -10, -7.5, 19, -10, -7.5, 0, -10, -8.2322, 19, -8.2322, -7.5, 19, -10, -7.5, 0, -10, -8.2322, 0, -8.2322, -8.2322, 19, -8.2322, -8.2322, 0, -8.2322, -10, 19, -7.5, -8.2322, 19, -8.2322, -8.2322, 0, -8.2322, -10, 0, -7.5, -10, 19, -7.5, -10, 0, -7.5, -11.7678, 19, -8.2322, -10, 19, -7.5, -10, 0, -7.5, -11.7678, 0, -8.2322, -11.7678, 19, -8.2322, -2.2322, 0, -17.7678, -1.5, 19, -16, -2.2322, 19, -17.7678, -2.2322, 0, -17.7678, -1.5, 0, -16, -1.5, 19, -16, -1.5, 0, -16, -2.2322, 19, -14.2322, -1.5, 19, -16, -1.5, 0, -16, -2.2322, 0, -14.2322, -2.2322, 19, -14.2322, -2.2322, 0, -14.2322, -4, 19, -13.5, -2.2322, 19, -14.2322, -2.2322, 0, -14.2322, -4, 0, -13.5, -4, 19, -13.5, -4, 0, -13.5, -5.7678, 19, -14.2322, -4, 19, -13.5, -4, 0, -13.5, -5.7678, 0, -14.2322, -5.7678, 19, -14.2322, -14.2322, 0, -5.7678, -13.5, 19, -4, -14.2322, 19, -5.7678, -14.2322, 0, -5.7678, -13.5, 0, -4, -13.5, 19, -4, -13.5, 0, -4, -14.2322, 19, -2.2322, -13.5, 19, -4, -13.5, 0, -4, -14.2322, 0, -2.2322, -14.2322, 19, -2.2322, -14.2322, 0, -2.2322, -16, 19, -1.5, -14.2322, 19, -2.2322, -14.2322, 0, -2.2322, -16, 0, -1.5, -16, 19, -1.5, -16, 0, -1.5, -17.7678, 19, -2.2322, -16, 19, -1.5, -16, 0, -1.5, -17.7678, 0, -2.2322, -17.7678, 19, -2.2322 )

[sub_resource type="CubeMesh" id=7]

[sub_resource type="BoxShape" id=3]

[sub_resource type="BoxShape" id=5]

[sub_resource type="BoxShape" id=4]

[sub_resource type="BoxShape" id=6]

[node name="lhall0" type="Spatial" groups=["PlacedRoom"]]
transform = Transform( 0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, 0, 0 )
script = ExtResource( 2 )

[node name="lhall0" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="lhall0" groups=["SetRoom"]]
collision_layer = 532
collision_mask = 532

[node name="CollisionShape" type="CollisionShape" parent="lhall0/StaticBody"]
shape = SubResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="lhall0/StaticBody" groups=["astar"]]
transform = Transform( 17.5, 0, 0, 0, 0.5, 0, 0, 0, 5, 7.5, 0, 0 )
visible = false
mesh = SubResource( 7 )
material/0 = null

[node name="MeshInstance2" type="MeshInstance" parent="lhall0/StaticBody" groups=["astar"]]
transform = Transform( 5, 0, 0, 0, 0.5, 0, 0, 0, 10, 0, 0, 15 )
visible = false
mesh = SubResource( 7 )
material/0 = null

[node name="Front" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 45 )

[node name="DFront" type="Area" parent="Front"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -20 )
collision_layer = 256
collision_mask = 256

[node name="CollisionShape" type="CollisionShape" parent="Front/DFront"]
shape = SubResource( 3 )
disabled = true

[node name="Front" type="Area" parent="Front"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -4, 0 )
collision_layer = 512
collision_mask = 512

[node name="CollisionShape" type="CollisionShape" parent="Front/Front"]
shape = SubResource( 5 )
disabled = true

[node name="Side" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 45, 0, 0 )

[node name="DSide" type="Area" parent="Side"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 0, 0 )
collision_layer = 256
collision_mask = 256

[node name="CollisionShape" type="CollisionShape" parent="Side/DSide"]
shape = SubResource( 4 )
disabled = true

[node name="Side" type="Area" parent="Side"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -4, 0 )
collision_layer = 512
collision_mask = 512

[node name="CollisionShape" type="CollisionShape" parent="Side/Side"]
shape = SubResource( 6 )
disabled = true

[node name="VisibilityNotifier" type="VisibilityNotifier" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 9.89005, 0 )
aabb = AABB( -27.0582, -10.6215, -26.8104, 54.1164, 21.2429, 53.6209 )

[connection signal="body_entered" from="Front/DFront" to="." method="_on_DFront_body_entered"]
[connection signal="body_entered" from="Front/Front" to="." method="_on_Front_body_entered"]
[connection signal="body_entered" from="Side/DSide" to="." method="_on_DSide_body_entered"]
[connection signal="body_entered" from="Side/Side" to="." method="_on_Side_body_entered"]
[connection signal="screen_entered" from="VisibilityNotifier" to="." method="_on_VisibilityNotifier_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier" to="." method="_on_VisibilityNotifier_screen_exited"]
